kubernetes/chuck/03_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chuck-quote-services
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - http:
        paths:
          - path: /chuck
            pathType: Prefix
            backend:
              service:
                name: chuck-quote-service
                port:
                  number: 8080
